--- a/index.html
+++ b/index.html
@@ -8,26 +8,42 @@
 <body>
     <div class="container">
         <div class="img-container">
-            <img src="adora-goodenough-BY3YhaxZ3NM-unsplash.jpg">
+            <img src="elia-pellegrini-C54fuJ5E8YU-unsplash.jpg">
         </div>
         <div class="right-section">
             <div class="info">
-                <p> This page is everything you've dreamt of. Sign up now to get started if you haven't already!</p>
+                <p> This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.Sign up now to get started.</p>
                 <p>You know you want to!</p>
             </div>
             <div class="form">
                 <form action="#">
-                    <label for="first_name">First Name:</label>
-                    <input type="text" id="first_name" placeholder="your name...obviously" name="first_name">
-                    <label for="last_name">Last Name:</label>
-                    <input type="text" id="last_name" placeholder="your last name..." name="first_name">
-                    <label for="user_email">Email Address:</label>
-                    <input type="email" id="user_email" name="email" placeholder="you@example.com">
-                    <label for="user_password">Password:</label>
-                    <input type="password" id="user_password" name="password" placeholder="create a password with at least 8 characters">
+                    <div>
+                        <label for="first_name">First Name:</label>
+                        <input type="text" id="first_name" placeholder="your name...obviously" name="first_name">
+                    </div>
+                    <div>
+                        <label for="last_name">Last Name:</label>
+                        <input type="text" id="last_name" placeholder="your last name..." name="first_name">
+                    </div>
+                    <div>
+                        <label for="user_email">Email Address:</label>
+                        <input type="email" id="user_email" name="email" placeholder="you@example.com">
+                    </div>
+                    <div>
+                        <label for="phonenumber">Phone Number:</label>
+                        <input type="tel" id="phonenumber" name="phonenumber" placeholder="create a password with at least 8 characters">
+                    </div>
+                    <div>
+                        <label for="user_password">Password:</label>
+                        <input type="password" id="user_password" name="password" placeholder="create a password">
+                    </div>
+                    <div>
+                        <label for="confirm_password">Confirm-Password:</label>
+                        <input type="password" id="confirm_password" name="confirm_password" placeholder="write the password you created">
+                    </div>
                 </form>
                 <div class="submit-cont">
-                    <button type="submit">create an account</button>
+                    <button type="submit">CREATE AN ACCOUNT</button>
                 </div>
             </div>
         </div>
