--- a/index.html
+++ b/index.html
@@ -2,29 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Sign-Up Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="img-container">
-            <div class="text">SİGN UP FORM</div>
+            <div id="sign">SIGN-UP FORM</div>
+            <div id="photo-by">Photo by:Elia Pelegrini</div>
         </div>
         <div class="right-section">
             <div class="info">
-                <p> This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.Sign up now to get started.</p>
+                <p> This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started.</p>
                 <p>You know you want to!</p>
             </div>
-            <div class="form">
+            <div class="form-cont">
                 <p>- LET'S DO THIS! -</p>
                 <form action="#" id="my-form">
                     <div>
                         <label for="first_name">First Name:</label>
-                        <input type="text" id="first_name" placeholder="your name...obviously" name="first_name" required>
+                        <input type="text" id="first_name" placeholder="Jessica.." name="first_name" required>
                     </div>
                     <div>
                         <label for="last_name">Last Name:</label>
-                        <input type="text" id="last_name" placeholder="your last name..." name="first_name">
+                        <input type="text" id="last_name" placeholder="Day.." name="first_name" required>
                     </div>
                     <div>
                         <label for="user_email">Email Address:</label>
@@ -32,15 +33,15 @@
                     </div>
                     <div>
                         <label for="phonenumber">Phone Number:</label>
-                        <input type="number" id="phonenumber" name="phonenumber" placeholder="your phone number">
+                        <input type="number" id="phonenumber" name="phonenumber" placeholder="12345..." minlength="8" required valid>
                     </div>
                     <div>
                         <label for="user_password">Password:</label>
-                        <input type="password" id="user_password" name="password" placeholder="create a password" required>
+                        <input type="password" id="user_password" name="password" placeholder="create a password" required valid>
                     </div>
                     <div>
                         <label for="confirm_password">Confirm-Password:</label>
-                        <input type="password" id="confirm_password" name="confirm_password" placeholder="write the password you created" required oninput="check(this)">
+                        <input type="password" id="confirm_password" name="confirm_password" placeholder="verify the password" required oninput="check(this)">
                         <script language='javascript' type='text/javascript'>
                             function check(input) {
                                 if (input.value != document.getElementById('user_password').value) {
