--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             </div>
             <div class="submit-cont">
                     <button type="submit" value="submit" form="my-form">CREATE ACCOUNT</button>
+                    <p>Already have an account? <a href="#">LOG IN</a></p>
             </div>
             
         </div>
